# libjpeg

./: CMakeLists.txt
impact/: CMakeLists.txt
my_cmake/: CMakeLists.txt  ConfigureChecks.cmake
